force-app/main/default/objects/Contact/fields/Acquired_From__c.field-meta.xml
<CustomField>
    <fullName>Acquired_From__c</fullName>
    <inlineHelpText>HL Acquisitions only</inlineHelpText>
    <label>Acquired From</label>
    <length>32</length>
    <type>Text</type>
</CustomField>