force-app/main/default/objects/Contact/fields/Alternate_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Address_Type__c</fullName>
    <label>Alternate Address Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>