force-app/main/default/objects/Contact/fields/Badge_Company__c.field-meta.xml
<CustomField>
    <fullName>Badge_Company__c</fullName>
    <label>Badge Company</label>
    <length>128</length>
    <type>Text</type>
</CustomField>