force-app/main/default/objects/Contact/fields/Badge_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Badge_First_Name__c</fullName>
    <label>Badge First Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>