force-app/main/default/objects/Contact/fields/Badge_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Badge_Full_Name__c</fullName>
    <formula>Badge_First_Name__c  &amp; &quot; &quot; &amp;  Badge_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Badge Full Name</label>
    <type>Text</type>
</CustomField>