force-app/main/default/objects/Contact/fields/Badge_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Badge_Last_Name__c</fullName>
    <label>Badge Last Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>