force-app/main/default/objects/Contact/fields/BOD__c.field-meta.xml
<CustomField>
    <fullName>BOD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HL Board Member</description>
    <inlineHelpText>Board Member</inlineHelpText>
    <label>BOD</label>
    <type>Checkbox</type>
</CustomField>