force-app/main/default/objects/Contact/fields/BriteVerify_Email_Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>BriteVerify_Email_Verification_Date__c</fullName>
    <label>BriteVerify Email Verification Date</label>
    <type>Date</type>
</CustomField>