force-app/main/default/objects/Contact/fields/BriteVerify_Email_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>BriteVerify_Email_Verification_Status__c</fullName>
    <description>Brite Verify - DemandTool Email Verifcation Status</description>
    <label>BriteVerify Email Verification Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>