force-app/main/default/objects/Contact/fields/CapIQ_Professional_ID__c.field-meta.xml
<CustomField>
    <fullName>CapIQ_Professional_ID__c</fullName>
    <label>CapIQ Professional ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>