force-app/main/default/objects/Contact/fields/Ceridian_ID__c.field-meta.xml
<CustomField>
    <fullName>Ceridian_ID__c</fullName>
    <label>Ceridian ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>