force-app/main/default/objects/Contact/fields/CFS_Status__c.field-meta.xml
<CustomField>
    <fullName>CFS_Status__c</fullName>
    <description>Display CFS Status of associated user on contact for CFS reports</description>
    <formula>TEXT( User__r.lmscons__CFS_Status__c)</formula>
    <label>CFS Status</label>
    <type>Text</type>
</CustomField>