force-app/main/default/objects/Contact/fields/Class_Of__c.field-meta.xml
<CustomField>
    <fullName>Class_Of__c</fullName>
    <label>Class Of</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>