force-app/main/default/objects/Contact/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADMIN</fullName>
            </value>
            <value>
                <fullName>BOARD</fullName>
            </value>
            <value>
                <fullName>CORPOFCR</fullName>
            </value>
            <value>
                <fullName>FA</fullName>
            </value>
            <value>
                <fullName>FIN</fullName>
            </value>
            <value>
                <fullName>FONFIN</fullName>
            </value>
            <value>
                <fullName>LONADMIN</fullName>
            </value>
            <value>
                <fullName>LONFA</fullName>
            </value>
            <value>
                <fullName>ROM</fullName>
            </value>
            <value>
                <fullName>TEMP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>