force-app/main/default/objects/Contact/fields/Close_Project_Notify__c.field-meta.xml
<CustomField>
    <fullName>Close_Project_Notify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close Project Notify</label>
    <type>Checkbox</type>
</CustomField>