force-app/main/default/objects/Contact/fields/Company_Website__c.field-meta.xml
<CustomField>
    <fullName>Company_Website__c</fullName>
    <formula>Account.Website</formula>
    <label>Company Website</label>
    <type>Text</type>
</CustomField>