force-app/main/default/objects/Contact/fields/Concur_Role__c.field-meta.xml
<CustomField>
    <fullName>Concur_Role__c</fullName>
    <label>Concur Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Expense_Application__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Archpoint</fullName>
            </value>
            <value>
                <fullName>Avista</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Mesa</fullName>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>RECR</fullName>
            </value>
            <value>
                <fullName>Test User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>