force-app/main/default/objects/Contact/fields/Concur_Travel__c.field-meta.xml
<CustomField>
    <fullName>Concur_Travel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for specifying if a temp contact is allowed to use the Concur travel module. The value is used by the Concur export files SSIS package for generating the 310 CSV files.</description>
    <inlineHelpText>Indicates if the contact of staff type HL-Temp will have access to the Concur travel module.</inlineHelpText>
    <label>Concur Travel</label>
    <type>Checkbox</type>
</CustomField>