force-app/main/default/objects/Contact/fields/Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Full_Name__c</fullName>
    <formula>IF(!ISBLANK(LastName), TRIM(LastName + &quot;, &quot; + FirstName + &quot; &quot; + MiddleName), &quot;&quot;)</formula>
    <label>Contact Full Name</label>
    <type>Text</type>
</CustomField>