force-app/main/default/objects/Contact/fields/Contact_Import_Batch__c.field-meta.xml
<CustomField>
    <fullName>Contact_Import_Batch__c</fullName>
    <description>When large batches of contacts are imported (i.e. acquisitions), the batch name will be entered. Reports can be run on this value to see all contacts imported from that batch. Delimited list</description>
    <inlineHelpText>Enter the source of imported contact</inlineHelpText>
    <label>Contact Import Batch</label>
    <type>TextArea</type>
</CustomField>