force-app/main/default/objects/Contact/fields/Contact_Move_Rights__c.field-meta.xml
<CustomField>
    <fullName>Contact_Move_Rights__c</fullName>
    <formula>User__r.Contact_Move_Rights__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Move Rights</label>
    <type>Checkbox</type>
</CustomField>