force-app/main/default/objects/Contact/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>HYPERLINK(&quot;/?sort=&quot; &amp;  LastName &amp; &quot;,&quot; &amp; FirstName, &quot;&quot;, &quot;_parent&quot;) &amp; 
HYPERLINK(&quot;/&quot;&amp; Id , LastName+&quot;, &quot;+ FirstName, &apos;_parent&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Display</label>
    <type>Text</type>
</CustomField>