force-app/main/default/objects/Contact/fields/Copy_From_Contact_Detail__c.field-meta.xml
<CustomField>
    <fullName>Copy_From_Contact_Detail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy From Contact Detail</label>
    <type>Checkbox</type>
</CustomField>