force-app/main/default/objects/Contact/fields/Counterparty_Contact_RollUp__c.field-meta.xml
<CustomField>
    <fullName>Counterparty_Contact_RollUp__c</fullName>
    <label>Counterparty Contact_RollUp</label>
    <summaryForeignKey>Engagement_Counterparty_Contact__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>