force-app/main/default/objects/Contact/fields/Custom_Field_3__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_3__c</fullName>
    <label>Custom Field 3</label>
    <type>TextArea</type>
</CustomField>