force-app/main/default/objects/Contact/fields/DaScoopComposer__Black_List__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Black_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Block List</label>
    <referenceTo>DaScoopComposer__Black_List__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>