force-app/main/default/objects/Contact/fields/DaScoopComposer__Email_2__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Email_2__c</fullName>
    <inlineHelpText>is the secondary email address of this contact</inlineHelpText>
    <label>Email 2</label>
    <type>Email</type>
</CustomField>