force-app/main/default/objects/Contact/fields/DaScoopComposer__Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Email_Domain__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>is an inferred hash key to improve performance. This field was deprecated.</inlineHelpText>
    <label>Email Domain and Contact Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>