force-app/main/default/objects/Contact/fields/DaScoopComposer__Groove_Create_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Groove_Create_Opportunity__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;006/e?conid=&apos; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is the URL of a &quot;Create Opportunity&quot; screen. It allows the user to create an opportunity with a contact role. This can be added to a Groove View and can be rendered as an action button in your email client.</inlineHelpText>
    <label>Create Opportunity</label>
    <type>Text</type>
</CustomField>