force-app/main/default/objects/Contact/fields/DaScoopComposer__Groove_Notes__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Groove_Notes__c</fullName>
    <inlineHelpText>Contains notes that are surfaced in Groove&apos;s sidebar by default.</inlineHelpText>
    <label>Groove Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>