force-app/main/default/objects/Contact/fields/DaScoopComposer__Is_Created_By_Groove__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Is_Created_By_Groove__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether this contact was created by Groove.</inlineHelpText>
    <label>Is Created By Groove</label>
    <type>Checkbox</type>
</CustomField>