force-app/main/default/objects/Contact/fields/ddc_prospector__Sourced_from_Data_com__c.field-meta.xml
<CustomField>
    <fullName>ddc_prospector__Sourced_from_Data_com__c</fullName>
    <description>Used by Data.com Prospector Reports</description>
    <formula>IF(OR(CONTAINS(TEXT(LeadSource),&quot;Jigsaw&quot;),CONTAINS(TEXT(LeadSource),&quot;Data.com&quot;)),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sourced from Data.com</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>