force-app/main/default/objects/Contact/fields/Deal_Announcements_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Announcements_Change_Date__c</fullName>
    <label>Deal Announcements Change Date</label>
    <type>Date</type>
</CustomField>