force-app/main/default/objects/Contact/fields/Different_Address__c.field-meta.xml
<CustomField>
    <fullName>Different_Address__c</fullName>
    <description>If Contact MailingAddress != Company BillingAddress, then this will be TRUE</description>
    <formula>IF(
(
 MailingStreet != Account.BillingStreet ||
 MailingCity != Account.BillingCity ||
 MailingState != Account.BillingState ||
 MailingPostalCode != Account.BillingPostalCode ||
 MailingCountry != Account.BillingCountry
),

TRUE,FALSE)</formula>
    <label>Different Address</label>
    <type>Checkbox</type>
</CustomField>