force-app/main/default/objects/Contact/fields/Direct_Report__c.field-meta.xml
<CustomField>
    <fullName>Direct_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Expense Reviewer, map to Reviewer also</inlineHelpText>
    <label>Expense Approver</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Direct Report must be active HL employee</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>012i0000000tEheAAE</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Direct Report)</relationshipLabel>
    <relationshipName>Expense_Reviewer</relationshipName>
    <type>Lookup</type>
</CustomField>