force-app/main/default/objects/Contact/fields/Disclose_Personal__c.field-meta.xml
<CustomField>
    <fullName>Disclose_Personal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disclose Personal</label>
    <type>Checkbox</type>
</CustomField>