force-app/main/default/objects/Contact/fields/DNBoptimizer__DnBContactRecord__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__DnBContactRecord__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Upon a successful match, Optimizer populates this field that links the Lead record to a specific D&amp;B Contact ID for display of the correct custom object with D&amp;B data.</description>
    <inlineHelpText>Upon a successful match, Optimizer populates this field that links the Lead record to a specific D&amp;B Contact ID for display of the correct custom object with D&amp;B data.</inlineHelpText>
    <label>ContactToDnB</label>
    <referenceTo>DNBoptimizer__DnBContactRecord__c</referenceTo>
    <relationshipLabel>ContactToDnB</relationshipLabel>
    <relationshipName>ContactToDnB</relationshipName>
    <type>Lookup</type>
</CustomField>