force-app/main/default/objects/Contact/fields/Do_Not_Email__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HL custom Do not Email field</description>
    <inlineHelpText>HL custom Do not Email field</inlineHelpText>
    <label>Manual Opt Out</label>
    <type>Checkbox</type>
</CustomField>