force-app/main/default/objects/Contact/fields/Do_Not_Mail_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Mail_Change_Date__c</fullName>
    <label>Do Not Mail Change Date</label>
    <type>Date</type>
</CustomField>