force-app/main/default/objects/Contact/fields/Do_Not_Solicit_Deals__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Solicit_Deals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Solicit - Deals</label>
    <type>Checkbox</type>
</CustomField>