force-app/main/default/objects/Contact/fields/Do_Not_Solicit_Studies__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Solicit_Studies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Solicit - Studies</label>
    <type>Checkbox</type>
</CustomField>