force-app/main/default/objects/Contact/fields/ERP_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>ERP_Business_Unit__c</fullName>
    <formula>Legal_Entity__r.ERP_Business_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Business Unit</label>
    <type>Text</type>
</CustomField>