force-app/main/default/objects/Contact/fields/ERP_Contact_Point_Email_Flag__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contact_Point_Email_Flag__c</fullName>
    <label>ERP Contact Point Email Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>