force-app/main/default/objects/Contact/fields/ERP_Contact_Point_Relationship_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contact_Point_Relationship_ID__c</fullName>
    <label>ERP Contact Point Relationship ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>