force-app/main/default/objects/Contact/fields/ERP_HCM_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_HCM_ID__c</fullName>
    <description>ID in ERP HCM</description>
    <label>ERP HCM ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>