force-app/main/default/objects/Contact/fields/ERP_HCM_Last_Integration_Error_Desc__c.field-meta.xml
<CustomField>
    <fullName>ERP_HCM_Last_Integration_Error_Desc__c</fullName>
    <description>Error description of the most recent integration with ERP</description>
    <label>ERP HCM Last Integration Error Desc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>