force-app/main/default/objects/Contact/fields/ERP_Last_Integration_Error_Description__c.field-meta.xml
<CustomField>
    <fullName>ERP_Last_Integration_Error_Description__c</fullName>
    <description>Error description of the most recent integration with ERP</description>
    <label>ERP Last Integration Error Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>