force-app/main/default/objects/Contact/fields/ERP_Last_Integration_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>ERP_Last_Integration_Response_Date__c</fullName>
    <description>Date/time of the most recent integration with ERP</description>
    <label>ERP Last Integration Response Date</label>
    <type>DateTime</type>
</CustomField>