force-app/main/default/objects/Contact/fields/ERP_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>ERP_Legal_Entity__c</fullName>
    <formula>Legal_Entity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Legal Entity</label>
    <type>Text</type>
</CustomField>