force-app/main/default/objects/Contact/fields/ERP_Liability_Distribution_Set__c.field-meta.xml
<CustomField>
    <fullName>ERP_Liability_Distribution_Set__c</fullName>
    <description>Liability distribution set for ERP</description>
    <formula>Legal_Entity__r.ERP_Entity_Code__c + &apos;.000.00.000.00000.30610.000.00000.00000.00000&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Liability Distribution Set</label>
    <type>Text</type>
</CustomField>