force-app/main/default/objects/Contact/fields/ERP_Person_Party_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_Person_Party_ID__c</fullName>
    <label>ERP Person Party ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>