force-app/main/default/objects/Contact/fields/Events_Conference_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Events_Conference_Change_Date__c</fullName>
    <label>Events/Conference Change Date</label>
    <type>Date</type>
</CustomField>