force-app/main/default/objects/Contact/fields/Extensity_Role__c.field-meta.xml
<CustomField>
    <fullName>Extensity_Role__c</fullName>
    <label>Extensity Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>All Locations</fullName>
            </value>
            <value>
                <fullName>AP Review</fullName>
            </value>
            <value>
                <fullName>Archpoint</fullName>
            </value>
            <value>
                <fullName>Avista</fullName>
            </value>
            <value>
                <fullName>Blenheim</fullName>
            </value>
            <value>
                <fullName>Business Forum</fullName>
            </value>
            <value>
                <fullName>Bypass</fullName>
            </value>
            <value>
                <fullName>CF &amp; FRG L/G</fullName>
            </value>
            <value>
                <fullName>CF Event</fullName>
            </value>
            <value>
                <fullName>Corp General</fullName>
            </value>
            <value>
                <fullName>DAG FF</fullName>
            </value>
            <value>
                <fullName>DAG LO</fullName>
            </value>
            <value>
                <fullName>Due FF</fullName>
            </value>
            <value>
                <fullName>Due LO</fullName>
            </value>
            <value>
                <fullName>Due PA</fullName>
            </value>
            <value>
                <fullName>EHP</fullName>
            </value>
            <value>
                <fullName>EHP1300</fullName>
            </value>
            <value>
                <fullName>Ex-Pat</fullName>
            </value>
            <value>
                <fullName>FRAM &amp; ORIX</fullName>
            </value>
            <value>
                <fullName>HK</fullName>
            </value>
            <value>
                <fullName>HK FVA</fullName>
            </value>
            <value>
                <fullName>Hong Kong and Tokyo</fullName>
            </value>
            <value>
                <fullName>IHC</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Madrid</fullName>
            </value>
            <value>
                <fullName>Managing Approver</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>Opp Fund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>