force-app/main/default/objects/Contact/fields/Family_and_Personal_Information__c.field-meta.xml
<CustomField>
    <fullName>Family_and_Personal_Information__c</fullName>
    <label>Family and Personal Information</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>